Updates from Overleaf

--- a/bibFile.bib
+++ b/bibFile.bib
@@ -201,6 +201,18 @@
   organization={PMLR}
 }
 
+@article{nn-rl-fcnn,
+  title={Neural network based reinforcement learning acceleration on fpga platforms},
+  author={Su, Jiang and Liu, Jianxiong and Thomas, David B and Cheung, Peter YK},
+  journal={ACM SIGARCH Computer Architecture News},
+  volume={44},
+  number={4},
+  pages={68--73},
+  year={2017},
+  publisher={ACM New York, NY, USA}
+}
+
+
 @inproceedings{flexible-NN,
   title={Hw-Sw codesign of a flexible neural controller through a FPGA-based neural network programmed in VHDL},
   author={Pasero, E and Perri, M},
