Updates from Overleaf

--- a/root.tex
+++ b/root.tex
@@ -377,10 +377,12 @@ where each unit $u_{k}^{n, z}$ is 1-bit flag that tells if any action matrix ele
     
     \item A trend for resources requirements with growth in state space
 \end{itemize}
-We use a fully-connected Q-learning NN implementation proposed in \cite{nn-rl-fcnn} as our baseline. The problem implemented with baseline and Meta-DNN is a 2D maze routing problem, where the objective is to navigate to the terminal state in fewer steps possible. The action space remains a 4-tuple constant for moving in all four directions on the grid (up, down, left, right). However, actions are characterized as stochastic with $\epsilon=0.3$, and the state space can grow infinitely, thus keeping the complexity of problem admissible for evaluating high-dimensional performance. The comparison plots in fig. \ref{fig:plots} illustrate the performance by drawing comparison of a reward signal per unit inference step. The state space size used for those runs was $2^{20}=1048576$, which is quite over 1 million states, each with state having 4 possible actions to take. The plot trend seen in fig.\ref{fig:plots}.(a) and \ref{fig:plots}.(b) show independent runs for the baseline and Meta-DNN respectively. To ensure repeatability of solution, multiple runs were carried out in each case. It is evident that the baseline achieves higher reward  A side-by-side comparison 
+We use a fully-connected Q-learning NN implementation proposed in \cite{nn-rl-fcnn} as our baseline. The problem implemented with baseline and Meta-DNN is a 2D maze routing problem, where the objective is to navigate to the terminal state in fewer steps possible. The action space remains a 4-tuple constant for moving in all four directions on the grid (up, down, left, right). However, actions are characterized as stochastic with $\epsilon=0.3$, and the state space can grow infinitely, thus keeping the complexity of problem admissible for evaluating high-dimensional performance. The comparison plots in fig. \ref{fig:plots} illustrate the performance by drawing comparison of a reward signal per unit inference step. The state space size used for those runs was $2^{20}=1048576$, which is quite over 1 million states, each with state having 4 possible actions to take. The plot trend seen in fig.\ref{fig:plots}.(a) and \ref{fig:plots}.(b) show independent runs for the baseline and Meta-DNN respectively. The oracle line in each plot determines the criteria of success, that is reaching to the terminal state in the grid, hence accomplishing the objective. To ensure repeatability of solution, multiple runs were carried out in each case. 
 
+It is evident that the baseline settles down to oracle quite quicker than that of Meta-DNN trend in fig. \ref{fig:plots}.(b). However, we will see that the baseline takes higher wall-clock time per inference instance, and also with growing state space, the baseline performance tend to deteriorate heavily (see, table. \ref{table:max-error}). Additionally, the Meta-DNN is also utilizing fewer compute resources at a level of $35\%$ sparsity. A side-by-side comparison of an average run for both baseline and Meta-DNN is depicted in fig. \ref{fig:plots}.(c), which shows that after initial iterations, Meta-DNN exhibits success equivalent to a fully connected ANN baseline.
 
-\begin{table}[]
+To further validate the performance, we clocked each inference periods in terms of physical wall clock time taken per run. The trend for that comparison is depicted in fig. \ref{fig:clock-time}. As it is supposed to be, Meta-DNN has a very high inference time at start of experiment, mainly because of arbitrary interconnects being used at initial stage. However, it is important note that it rapidly adapts to desired distribution, hence requiring lesser time to do forward-pass in the network, resulting in reduced time period, which can be observed between x-axis values of 550 and 750 in fig. \ref{fig:clock-time}. Also, only after $33\%$ of elapsed runs, Meta-DNN beats the baseline. Additionally it settles down to a steady rate of $0.002439\  seconds/inference$ $(2.439ms)$ after $51\%$ of elapsed runs. The settlement time remains unattainable for baseline even at last recorded iteration. The baseline attains $0.0098968\  seconds/inference$ $(9.896ms)$, which has a difference of $7.457ms$.
+\begin{table}[hptb]
 \begin{tabular}{rlcccccc}
 \hline
 \multicolumn{1}{c}{} &  & \multicolumn{1}{c|}{} & \multicolumn{5}{c}{Meta-DNN Sparsity (\%)} \\
@@ -394,6 +396,9 @@ We use a fully-connected Q-learning NN implementation proposed in \cite{nn-rl-fc
 \caption{Max inference error with growing state space}
 \label{table:max-error}
 \end{table}
+
+
+For testing the limits of our purposed methodology, we examined Meta-DNN and its baseline with incrementally growing state space size and varying sparsity of interconnects. The results of which are shown in table \ref{table:max-error}. Meta-DNN at sparsity level of $0\%$ is theoretically 
 
 \section{Conclusion} \label{conclusion}
 
